Fixing button wrap

--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -129,6 +129,7 @@ body {
 
 .filter-btn-group {
   margin-bottom: 24px;
+  display: inline-block
 }
 
 .btn-clear {
